# apps/api/src/main/java/cl/zzenner/cobranza/personas/api/RutValidacionApi.java
@@ -1,0 +1,6 @@
+package cl.zzenner.cobranza.personas.api;
+
+public interface RutValidacionApi {
+
+    boolean esValido(String rutNumero, String rutDv);
+}
